--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ dependencies = [
     "matplotlib>=3.7",
     "seaborn>=0.12",
     "anndata>=0.9",
+    "gradio>=4.0",
+    "requests",
 ]
 
 [project.optional-dependencies]
@@ -21,6 +23,7 @@ dev = ["pytest>=7.0", "black>=23.0", "ruff>=0.6"]
 
 [project.scripts]
 lacogsea = "lacogsea.cli:main"
+lacogsea-gui = "lacogsea.gui:main"
 
 [tool.setuptools.packages.find]
 where = ["."]
