--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,11 +12,10 @@ dependencies = [
     "torch>=2.0",
     "matplotlib>=3.7",
     "seaborn>=0.12",
-    "gradio>=4.0",
-    "requests",
 ]
 
 [project.optional-dependencies]
+gui = ["gradio>=4.0"]
 dev = ["pytest>=7.0", "black>=23.0", "ruff>=0.6"]
 
 [project.scripts]
