--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-numpy>=1.2.0,<2.0.0
-pandas>=1.5.0,<3.0.0
-torch>=2.0.0,<2.6.0
-matplotlib>=3.7.0,<4.0.0
-seaborn>=0.12.0,<1.0.0
-gradio>=4.0.0,<6.0.0
+numpy==1.26.4
+pandas==2.0.3
+torch==2.5.1
+matplotlib==3.7.5
+seaborn==0.13.2
+gradio==4.44.1
