--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,15 +7,15 @@ requires-python = ">=3.8"
 license = {text = "MIT"}
 authors = [{name = "LaCoGSEA Authors"}]
 dependencies = [
-    "numpy==1.26.4",
-    "pandas==2.0.3",
-    "torch==2.5.1",
-    "matplotlib==3.7.5",
-    "seaborn==0.13.2",
+    "numpy>=1.23.1,<2.0.0",
+    "pandas>=2.1.0,<3.0.0",
+    "torch>=2.1.0,<2.6.0",
+    "matplotlib>=3.7.0,<4.0.0",
+    "seaborn>=0.12.0,<1.0.0",
 ]
 
 [project.optional-dependencies]
-gui = ["gradio==4.44.1"]
+gui = ["gradio>=4.44.1,<5.0.0"]
 dev = ["pytest>=7.0", "black>=23.0", "ruff>=0.6"]
 
 [project.scripts]
