--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,10 @@ requires-python = ">=3.8"
 license = {text = "MIT"}
 authors = [{name = "LaCoGSEA Authors"}]
 dependencies = [
-    "numpy>=1.23.0,<2.0.0",
-    "pandas>=1.5.0,<3.0.0",
-    "torch>=2.0.0,<2.6.0",
+    'numpy>=1.23.0,<2.0.0; python_version < "3.13"',
+    'numpy>=2.1.1; python_version >= "3.13"',
+    'pandas>=1.5.1,<3.0.0; python_version < "3.13"',
+    'pandas>=2.2.3; python_version >= "3.13"',
     "matplotlib>=3.7.0,<4.0.0",
     "seaborn>=0.12.0,<1.0.0",
 ]
