--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
-numpy>=1.23.0,<2.0.0
-pandas>=1.5.0,<3.0.0
-torch>=2.0.0,<2.6.0
+# General dependencies
 matplotlib>=3.7.0,<4.0.0
 seaborn>=0.12.0,<1.0.0
 gradio>=4.44.1,<5.0.0
+
+# Version-specific adaptations (to avoid source compilation)
+numpy>=1.23.0,<2.0.0; python_version < "3.13"
+numpy>=2.1.1; python_version >= "3.13"
+
+pandas>=1.5.1,<3.0.0; python_version < "3.13"
+pandas>=2.2.3; python_version >= "3.13"
