--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
 # General dependencies
 matplotlib>=3.7.0,<4.0.0
 seaborn>=0.12.0,<1.0.0
-gradio>=4.44.1,<5.0.0
 
-# Version-specific adaptations (to avoid source compilation)
+# Version-specific adaptations
 numpy>=1.23.0,<2.0.0; python_version < "3.13"
 numpy>=2.1.1; python_version >= "3.13"
 
 pandas>=1.5.1,<3.0.0; python_version < "3.13"
 pandas>=2.2.3; python_version >= "3.13"
+
+# Gradio Stack Fix for 3.13
+gradio>=4.44.1,<5.0.0; python_version < "3.13"
+gradio>=5.5.0; python_version >= "3.13"
+huggingface_hub>=0.25.0; python_version >= "3.13"
