--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,6 @@ numpy>=2.1.1; python_version >= "3.13"
 pandas>=1.5.1,<3.0.0; python_version < "3.13"
 pandas>=2.2.3; python_version >= "3.13"
 
-# Gradio versioning
-gradio>=4.44.1,<5.0.0; python_version < "3.12"
-gradio>=5.5.0; python_version >= "3.12"
+# Gradio versioning - Note: GUI has compatibility issues with Python 3.12
+# For Python 3.12 users: Please use Python 3.11 for GUI, or use CLI mode
+gradio>=4.44.1,<5.0.0
