--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Lightweight LaCoGSEA core: autoencoder training, RNK generation, 
 readme = "README.md"
 requires-python = ">=3.8"
 license = {text = "MIT"}
-authors = [{name = "LaCoGSEA Authors"}]
+authors = [{name = "Zheng Zhiwei", email = "zhengzhiwei@outlook.com"}]
 dependencies = [
     'numpy>=1.23.0,<2.0.0; python_version < "3.13"',
     'numpy>=2.1.1; python_version >= "3.13"',
