--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,17 +7,19 @@ requires-python = ">=3.8"
 license = {text = "MIT"}
 authors = [{name = "Zheng Zhiwei", email = "zhengzhiwei@outlook.com"}]
 dependencies = [
-    'numpy>=1.23.0,<2.0.0; python_version < "3.13"',
-    'numpy>=2.1.1; python_version >= "3.13"',
-    'pandas>=1.5.1,<3.0.0; python_version < "3.13"',
-    'pandas>=2.2.3; python_version >= "3.13"',
-    "matplotlib>=3.7.0,<4.0.0",
-    "seaborn>=0.12.0,<1.0.0",
+    "numpy==1.24.4",
+    "pandas==2.0.3",
+    "matplotlib==3.7.5",
+    "seaborn==0.13.0",
+    "torch==2.4.1",
+    "gseapy==1.1.9",
+    "tqdm==4.67.1",
+    "huggingface_hub==0.25.2",
 ]
 
 [project.optional-dependencies]
-gui = ["gradio>=4.44.1,<5.0.0"]
-dev = ["pytest>=7.0", "black>=23.0", "ruff>=0.6"]
+gui = ["gradio==4.44.1"]
+dev = ["pytest==8.3.5", "ruff==0.14.11"]
 
 [project.scripts]
 lacogsea = "lacogsea.cli:main"
