--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,14 @@
-# Core dependencies with strict compatibility
-matplotlib>=3.7.0,<4.0.0
-seaborn>=0.12.0,<1.0.0
-
-# Prevent the 'HfFolder' ImportError by capping the hub version
-huggingface_hub>=0.23.0,<0.26.0
-
-# Python version specific stability
-numpy>=1.23.0,<2.0.0; python_version < "3.13"
-numpy>=2.1.1; python_version >= "3.13"
-
-pandas>=1.5.1,<3.0.0; python_version < "3.13"
-pandas>=2.2.3; python_version >= "3.13"
-
-# Gradio versioning - Note: GUI has compatibility issues with Python 3.12
-# For Python 3.12 users: Please use Python 3.11 for GUI, or use CLI mode
-gradio>=4.44.1,<5.0.0
+# Fixed versions based on current working environment
+numpy==1.24.4
+pandas==2.0.3
+matplotlib==3.7.5
+seaborn==0.13.0
+huggingface_hub==0.25.2
+gradio==4.44.1
+torch==2.4.1
+gseapy==1.1.9
+tqdm==4.67.1
+scipy==1.10.1
+scikit-learn==1.3.2
+pillow==10.4.0
+PyYAML==6.0.1
